Hypertension Class Committed and Synced

--- a/Impilo App/Impilo_App.csproj
+++ b/Impilo App/Impilo_App.csproj
@@ -270,7 +270,122 @@
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes4Q.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes3Q .cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes2Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension10aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension10bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension10Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension11aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension11bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension11Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension12aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension12bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension12Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension13Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension14aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension14bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension14Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension15aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension15bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension15Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension16aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension16bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension16Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension17aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension17bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension17Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension18aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension18bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension18Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension19aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension19bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension19Q.cs" />
     <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension1Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension20Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension21Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension22aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension22bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension22Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension23Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension24aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension24bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension24cQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension24dQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension24Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension25aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension25bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension25Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension26aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension26bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension26Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension27aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension27bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension27Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension28aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension28bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension28Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension29aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension29bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension29Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension2Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension30aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension30bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension30Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension31aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension31bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension31Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension32aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension32bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension32Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension33aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension33bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension33Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension34Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension35Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension36Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension37Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension38aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension38bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension38Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension39aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension39bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension39Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension3Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension40aQ.csClass1.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension40bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension40Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension41aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension41bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension41Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension42Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension43aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension43bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension43Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension44aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension44bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension44Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension45aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension45bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension45Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension46aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension46bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension46Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension47aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension47bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension47Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension48aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension48bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension48Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension4Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension5Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension6Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension7aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension7bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension7Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension8Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension9aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension9bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension9cQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension9dQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Hypertension\Hypertension9Q.cs" />
     <Compile Include="Views\CHOW\AddChow.xaml.cs">
       <DependentUpon>AddChow.xaml</DependentUpon>
     </Compile>
