--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Impilo App\packages.config" />
   <repository path="..\Repository\packages.config" />
+  <repository path="..\WpfPageTransitions\packages.config" />
 </repositories>
