--- a/Impilo App/App.config
+++ b/Impilo App/App.config
@@ -8,7 +8,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
+    <!--Old One-->
     <add name="ConnectionString" connectionString="Data Source=db1.zadns.co.za;Initial Catalog=Impilo;User id=ImpiloUser;Password=tH3!0ngp@$swOrd;" providerName="System.Data.SqlClient" />
+    
+    <!--New One-->
+    <add name="ConnectionString" connectionString="Data Source=db1.zadns.co.za;Initial Catalog=ImpiloNew;User id=ImpiloUserNew;Password=tH3!0ngp@$swOrd;" providerName="System.Data.SqlClient" />
+    
     <!--<add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=impilo;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
     <!--<add name="impiloEntities" connectionString="metadata=res://*/Common.Database.csdl|res://*/Common.Database.ssdl|res://*/Common.Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PE_FHUMULANIT_3\SQLEXPRESS;initial catalog=impilo;Integrated Security=True;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="impiloEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=impilo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
