--- a/Impilo App/Impilo_App.csproj
+++ b/Impilo App/Impilo_App.csproj
@@ -164,6 +164,19 @@
     <Compile Include="LocalModels\EnvironmentalExtra.cs" />
     <Compile Include="LocalModels\Epilepsy.cs" />
     <Compile Include="LocalModels\FollowUp.cs" />
+    <Compile Include="LocalModels\FollowUpAsthma.cs" />
+    <Compile Include="LocalModels\FollowUpChildHealth.cs" />
+    <Compile Include="LocalModels\FollowUpChildHealthConcerns.cs" />
+    <Compile Include="LocalModels\FollowUpChildHealthImmunisationsOutstanding.cs" />
+    <Compile Include="LocalModels\FollowUpConditionMedication.cs" />
+    <Compile Include="LocalModels\FollowUpDiabetes.cs" />
+    <Compile Include="LocalModels\FollowUpEpilepsy.cs" />
+    <Compile Include="LocalModels\FollowUpHIV.cs" />
+    <Compile Include="LocalModels\FollowUpHypertension.cs" />
+    <Compile Include="LocalModels\FollowUpMaternalHealth.cs" />
+    <Compile Include="LocalModels\FollowUpOther.cs" />
+    <Compile Include="LocalModels\FollowUpTB.cs" />
+    <Compile Include="LocalModels\FollowUpVisitDetails.cs" />
     <Compile Include="LocalModels\General.cs" />
     <Compile Include="LocalModels\HealthWorker.cs" />
     <Compile Include="LocalModels\HIV.cs" />
