Major code behind - clinic

--- a/Impilo App/App.config
+++ b/Impilo App/App.config
@@ -9,7 +9,7 @@
   </startup>
   <connectionStrings>
     <!--Old One-->
-    <add name="ConnectionString" connectionString="Data Source=db1.zadns.co.za;Initial Catalog=Impilo;User id=ImpiloUser;Password=tH3!0ngp@$swOrd;" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=db1.zadns.co.za;Initial Catalog=Impilo;User id=ImpiloUser;Password=tH3!0ngp@$swOrdc;" providerName="System.Data.SqlClient" />
     
     <!--New One
     <add name="ConnectionString" connectionString="Data Source=db1.zadns.co.za;Initial Catalog=ImpiloNew;User id=ImpiloUserNew;Password=tH3!0ngp@$swOrd;" providerName="System.Data.SqlClient" />
