Multi Combo box added

--- a/Impilo App/Impilo_App.csproj
+++ b/Impilo App/Impilo_App.csproj
@@ -450,6 +450,7 @@
     <Compile Include="Views\Reports\Format2Report.xaml.cs">
       <DependentUpon>Format2Report.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Screening\DataSource.cs" />
     <Compile Include="Views\Screening\ScreeningHome.xaml.cs">
       <DependentUpon>ScreeningHome.xaml</DependentUpon>
     </Compile>
@@ -546,6 +547,10 @@
     <Resource Include="Images\Logo2.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MultiSelectComboBox\MultiComboBox.csproj">
+      <Project>{6e683ffd-0f53-4225-b34c-88ef47f7d062}</Project>
+      <Name>MultiComboBox</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WpfPageTransitions\WpfPageTransitions.csproj">
       <Project>{22a46d61-1d40-43a9-802c-b9d43dadd9ec}</Project>
       <Name>WpfPageTransitions</Name>
