--- a/Impilo App/packages.config
+++ b/Impilo App/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.6" targetFramework="net45" />
+  <package id="NPOI" version="2.1.3.1" targetFramework="net45" />
 </packages>
