--- a/Impilo App/Impilo_App.csproj
+++ b/Impilo App/Impilo_App.csproj
@@ -150,16 +150,22 @@
     <Compile Include="LocalModels\ClientOld.cs" />
     <Compile Include="LocalModels\Clinic.cs" />
     <Compile Include="LocalModels\ClinicAsthma.cs" />
+    <Compile Include="LocalModels\ClinicAsthmaTreatment.cs" />
     <Compile Include="LocalModels\ClinicChildHealth.cs" />
     <Compile Include="LocalModels\ClinicClientBiographical.cs" />
     <Compile Include="LocalModels\ClinicConditionTreatment.cs" />
     <Compile Include="LocalModels\ClinicDiabetes.cs" />
+    <Compile Include="LocalModels\ClinicDiabetesTreatment.cs" />
     <Compile Include="LocalModels\ClinicEpilepsy.cs" />
+    <Compile Include="LocalModels\ClinicEpilepsyTreatment.cs" />
     <Compile Include="LocalModels\ClinicHIV.cs" />
+    <Compile Include="LocalModels\ClinicHIVTreatment.cs" />
     <Compile Include="LocalModels\ClinicHypertension.cs" />
+    <Compile Include="LocalModels\ClinicHypertensionTreatment.cs" />
     <Compile Include="LocalModels\ClinicMaternalHealth.cs" />
     <Compile Include="LocalModels\ClinicOther.cs" />
     <Compile Include="LocalModels\ClinicTB.cs" />
+    <Compile Include="LocalModels\ClinicTBTreatment.cs" />
     <Compile Include="LocalModels\ClinicVisitData.cs" />
     <Compile Include="LocalModels\CurrentMedications.cs" />
     <Compile Include="LocalModels\Diabetes.cs" />
@@ -170,17 +176,23 @@
     <Compile Include="LocalModels\Epilepsy.cs" />
     <Compile Include="LocalModels\FollowUp.cs" />
     <Compile Include="LocalModels\FollowUpAsthma.cs" />
+    <Compile Include="LocalModels\FollowUpAsthmaMedication.cs" />
     <Compile Include="LocalModels\FollowUpChildHealth.cs" />
     <Compile Include="LocalModels\FollowUpChildHealthConcerns.cs" />
     <Compile Include="LocalModels\FollowUpChildHealthImmunisationsOutstanding.cs" />
     <Compile Include="LocalModels\FollowUpConditionMedication.cs" />
     <Compile Include="LocalModels\FollowUpDiabetes.cs" />
+    <Compile Include="LocalModels\FollowUpDiabetesMedication.cs" />
     <Compile Include="LocalModels\FollowUpEpilepsy.cs" />
+    <Compile Include="LocalModels\FollowUpEpilepsyMedication.cs" />
     <Compile Include="LocalModels\FollowUpHIV.cs" />
+    <Compile Include="LocalModels\FollowUpHIVMedication.cs" />
     <Compile Include="LocalModels\FollowUpHypertension.cs" />
+    <Compile Include="LocalModels\FollowUpHypertensionMedication.cs" />
     <Compile Include="LocalModels\FollowUpMaternalHealth.cs" />
     <Compile Include="LocalModels\FollowUpOther.cs" />
     <Compile Include="LocalModels\FollowUpTB.cs" />
+    <Compile Include="LocalModels\FollowUpTBMedication.cs" />
     <Compile Include="LocalModels\FollowUpVisitDetails.cs" />
     <Compile Include="LocalModels\General.cs" />
     <Compile Include="LocalModels\HealthWorker.cs" />
