--- a/Impilo App/Impilo_App.csproj
+++ b/Impilo App/Impilo_App.csproj
@@ -215,62 +215,38 @@
     </Compile>
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes10bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes10aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes10cQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes10dQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes11bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes11aQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes12bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes12aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes13aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes13bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes13Q.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes14bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes14aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes15bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes15aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes16bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes16aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes17bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes17aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes18bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes18aQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes19bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes19aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes20aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes20bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes21aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes21bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes22bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes22aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes24bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes24cQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes24dQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes24aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes25bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes25aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes26bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes26aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes27bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes27aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes28bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes28aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes29bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes29aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes30bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes30aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes31bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes31aQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes32bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes32aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes32cQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes32dQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes33bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes33aQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes33Q.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes38bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes38aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes39bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes39aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes40bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes40aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes41bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes41aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes43bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes43aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes44bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes44aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes34aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes34bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes35aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes35bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes45bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes45aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes45cQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes45dQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes46bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes46aQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes47bQ.cs" />
@@ -315,12 +291,15 @@
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes11Q.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes1Q.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes10Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes49Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes50aQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes50bQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes50cQ.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes50Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes51Q.cs" />
+    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes52Q.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes7bQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes7aQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes9bQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes9c.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes9dQ.cs" />
-    <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes9aQ.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes9Q.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes8Q.cs" />
     <Compile Include="ReportQueries\Format 2\Diabetes\Diabetes7Q.cs" />
