--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Impilo App\packages.config" />
+  <repository path="..\MultiSelectComboBox\packages.config" />
   <repository path="..\Repository\packages.config" />
   <repository path="..\WpfPageTransitions\packages.config" />
 </repositories>
