--- a/MultiSelectComboBox/packages.config
+++ b/MultiSelectComboBox/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Extended.Wpf.Toolkit" version="2.6" targetFramework="net35" />
-  <package id="NPOI" version="2.1.3.1" targetFramework="net35" />
+  <package id="Extended.Wpf.Toolkit" version="2.6" targetFramework="net45" />
+  <package id="NPOI" version="2.1.3.1" targetFramework="net35" requireReinstallation="True" />
 </packages>
