All Requested Updates

--- a/Impilo App/Impilo_App.csproj
+++ b/Impilo App/Impilo_App.csproj
@@ -55,10 +55,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>7370305BC85288165B813129E9EEAF20861B23A4</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>B389760F55B3B8A0D980099FB643C66D55BF6141</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Impilo_App_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Impilo_App_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -515,6 +515,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Impilo_App_1_TemporaryKey.pfx" />
     <None Include="Impilo_App_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
