--- a/Impilo App/App.config
+++ b/Impilo App/App.config
@@ -15,11 +15,11 @@
     <add name="ConnectionString" connectionString="Data Source=db1.zadns.co.za;Initial Catalog=ImpiloNew;User id=ImpiloUserNew;Password=tH3!0ngp@$swOrd;" providerName="System.Data.SqlClient" />
    -->
     
-    <!--Stephane PC Case-->
-     <add name="ConnectionString" connectionString="Data Source=STEPHANE-PC ;Initial Catalog=ImpiloNew; Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--Deployment
+    <!--Stephane PC Case
+     <add name="ConnectionString" connectionString="Data Source=user-PC ;Initial Catalog=ImpiloNew; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    Deployment
     <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ImpiloNew;User id=ImpiloUser;Password=pa$$word;" providerName="System.Data.SqlClient" />-->
-    <!--
+    
     <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ImpiloNew;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
     <!--<add name="impiloEntities" connectionString="metadata=res://*/Common.Database.csdl|res://*/Common.Database.ssdl|res://*/Common.Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PE_FHUMULANIT_3\SQLEXPRESS;initial catalog=impilo;Integrated Security=True;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="impiloEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=impilo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
